test: add tests to improve coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,10 +28,10 @@ sonar.test.inclusions=**/__tests__/**/*
 sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,packages/analytics-js-plugins/src/errorReporting/event/**/*
 
 # Coverage config
-sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-plugins/src/errorReporting/event/**/*,packages/analytics-js-common/src/constants/integrations/**/*
+sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-plugins/src/errorReporting/event/**/*,packages/analytics-js-common/src/constants/integrations/**/*,packages/loading-scripts/**/*,packages/sanity-suite/**/*
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
 
 # Exclusions for copy-paste detection
-sonar.cpd.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-common/src/constants/integrations/**/*
+sonar.cpd.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,examples/**/*,**/nativeSdkLoader.js,assets/**/*,packages/analytics-js-common/src/constants/integrations/**/*,packages/loading-scripts/**/*,packages/sanity-suite/**/*
