--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -47,5 +47,6 @@ jobs:
   trigger-sanity-suite:
     uses: ./.github/workflows/trigger-sanity-suite.yml
     name: Trigger Sanity Suite
+    needs: deploy-sanity-suite
     with:
       environment: production
