--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -51,6 +51,7 @@ jobs:
 
   trigger-sanity-suite:
     uses: ./.github/workflows/trigger-sanity-suite.yml
+    needs: deploy-sanity-suite
     name: Trigger Sanity Suite
     with:
       environment: staging
