--- a/examples/gatsby/sample-gatsby-site/package.json
+++ b/examples/gatsby/sample-gatsby-site/package.json
@@ -17,27 +17,34 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "gatsby": "5.13.6",
+    "gatsby": "5.13.7",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "typescript": "^5.4.5"
+    "@types/node": "22.7.3",
+    "@types/react": "18.3.9",
+    "@types/react-dom": "18.3.0",
+    "typescript": "5.6.2"
   },
   "overrides": {
-    "@babel/traverse": "7.23.2",
-    "http-cache-semantics": "4.1.1",
-    "json5": "2.2.3",
-    "yaml": "2.3.4",
-    "pretty-error": "4.0.0",
-    "axios": "1.7.2",
+    "micromatch": "4.0.8",
     "webpack-dev-middleware": "7.2.1",
-    "braces": "3.0.3",
-    "micromatch": "4.0.6",
+    "body-parser": "1.20.3",
+    "axios": "1.7.7",
+    "path-to-regexp": "0.1.10",
     "serialize-javascript": "6.0.2",
-    "decode-uri-component": "0.2.2"
+    "@swc/helpers": "0.5.13",
+    "gatsby": {
+      "gatsby-cli": {
+        "pretty-error": {
+          "renderkid": {
+            "strip-ansi": {
+              "ansi-regex": "3.0.1"
+            }
+          }
+        }
+      }
+    }
   }
 }
