--- a/examples/nextjs/js/sample-app/package.json
+++ b/examples/nextjs/js/sample-app/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "next": "14.1.1",
+    "next": "14.2.13",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "13.5.4",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "autoprefixer": "^10.4.20",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.13",
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.13"
   }
 }
