--- a/examples/nextjs/ts/sample-app/package.json
+++ b/examples/nextjs/ts/sample-app/package.json
@@ -10,19 +10,19 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "next": "14.1.1",
+    "next": "14.2.13",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "13.5.4",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "@types/node": "22.7.3",
+    "@types/react": "18.3.9",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.13",
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.13",
+    "typescript": "5.6.2"
   }
 }
