--- a/examples/reactjs/ts/sample-app/package.json
+++ b/examples/reactjs/ts/sample-app/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "4.2.3"
   },
   "devDependencies": {
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.96",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25"
+    "typescript": "4.9.5",
+    "@types/jest": "29.5.13",
+    "@types/node": "22.7.3",
+    "@types/react": "18.3.9",
+    "@types/react-dom": "18.3.0"
   },
   "overrides": {
     "nth-check": "2.1.1",
