--- a/examples/reactjs/vite/sample-app/package.json
+++ b/examples/reactjs/vite/sample-app/package.json
@@ -11,19 +11,19 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.4.5",
-    "vite": "^4.5.3"
+    "@types/react": "18.3.9",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.7.0",
+    "@typescript-eslint/parser": "8.7.0",
+    "@vitejs/plugin-react-swc": "3.7.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.12",
+    "typescript": "5.6.2",
+    "vite": "5.4.8"
   }
 }
