--- a/examples/serverless/cloudflare-worker/package.json
+++ b/examples/serverless/cloudflare-worker/package.json
@@ -7,12 +7,12 @@
 		"start": "wrangler dev"
 	},
 	"devDependencies": {
-		"wrangler": "^3.51.0"
+		"wrangler": "3.78.10"
 	},
 	"dependencies": {
 		"@rudderstack/analytics-js-service-worker": "*",
-		"@vespaiach/axios-fetch-adapter": "^0.3.1",
-		"host-proxy": "^1.0.2",
-		"http-forward": "^0.1.3"
+		"@vespaiach/axios-fetch-adapter": "0.3.1",
+		"host-proxy": "1.0.2",
+		"http-forward": "0.1.3"
 	}
 }
