--- a/examples/symfony/sample/package.json
+++ b/examples/symfony/sample/package.json
@@ -1,13 +1,13 @@
 {
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
-    "@symfony/webpack-encore": "^4.6.1",
-    "core-js": "^3.37.0",
-    "regenerator-runtime": "^0.13.11",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-notifier": "^1.15.0"
+    "@babel/core": "7.25.2",
+    "@babel/preset-env": "7.25.4",
+    "@symfony/webpack-encore": "4.7.0",
+    "core-js": "3.38.1",
+    "regenerator-runtime": "0.14.1",
+    "webpack": "5.95.0",
+    "webpack-cli": "5.1.4",
+    "webpack-notifier": "1.15.0"
   },
   "license": "UNLICENSED",
   "private": true,
