--- a/.github/workflows/trigger-sanity-suite.yml
+++ b/.github/workflows/trigger-sanity-suite.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Trigger sanity suite test workflow on rudder-client-side-test
         run: |
           curl -X POST \
-          -H "Authorization: token ${{ secrets.PAT }}" \
+          -H "Authorization: Bearer ${{ secrets.PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/rudderlabs/rudder-client-side-test/dispatches \
           -d '{"event_type":"triggered_by_source_repo", "client_payload": {"environment": "${{ github.event.inputs.environment }}", "monorepoVersion": "${{ needs.extract-monorepo-version.outputs.version }}"}}'
