chore: pass missing secrets to the workflow

--- a/.github/workflows/trigger-sanity-suite.yml
+++ b/.github/workflows/trigger-sanity-suite.yml
@@ -17,6 +17,10 @@ on:
       environment:
         type: string
         default: production
+    secrets:
+      PAT:
+        description: Personal Access Token
+        required: true
 
 jobs:
   extract-monorepo-version:
