--- a/.prettierignore
+++ b/.prettierignore
@@ -13,3 +13,4 @@ examples/**/index.html
 examples/gatsby/sample-gatsby-site/public/
 examples/gatsby/sample-gatsby-plugin-usage/public/
 **/nativeSdkLoader.js
+composer.lock
