--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,12 +138,12 @@ jobs:
           plugins_html_file="list.html"
 
           # Generate a zip file of all the integrations
-          tar -czvf $integration_sdks_path_prefix/legacy/js-integrations/$integration_sdks_zip_file -C $integration_sdks_path_prefix/legacy/js-integrations/ .
+          tar --exclude="$integration_sdks_zip_file" -czvf $integration_sdks_path_prefix/legacy/js-integrations/$integration_sdks_zip_file -C $integration_sdks_path_prefix/legacy/js-integrations/ .
 
-          tar -czvf $integration_sdks_path_prefix/modern/js-integrations/$integration_sdks_zip_file -C $integration_sdks_path_prefix/modern/js-integrations/ .
+          tar --exclude="$integration_sdks_zip_file" -czvf $integration_sdks_path_prefix/modern/js-integrations/$integration_sdks_zip_file -C $integration_sdks_path_prefix/modern/js-integrations/ .
 
           # Generate a zip file of all the plugins
-          tar -czvf $plugins_path_prefix/modern/plugins/$plugins_zip_file -C $plugins_path_prefix/modern/plugins/ .
+          tar --exclude="$plugins_zip_file" -czvf $plugins_path_prefix/modern/plugins/$plugins_zip_file -C $plugins_path_prefix/modern/plugins/ .
 
           # Upload all the files to S3
           aws s3 cp $core_sdk_path_prefix/legacy/iife/ $s3_path_prefix/legacy/ $copy_args
