chore: fix source config fixture for iubenda

--- a/packages/sanity-suite/__fixtures__/sourceConfig1.json
+++ b/packages/sanity-suite/__fixtures__/sourceConfig1.json
@@ -534,6 +534,10 @@
       {
         "provider": "ketch",
         "resolutionStrategy": "or"
+      },
+      {
+        "provider": "iubenda",
+        "resolutionStrategy": "or"
       }
     ]
   }
