chore: use cross-env

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "package": "nx run-many -t package",
     "test": "nx run-many -t test",
     "test:pre-commit:affected": "nx affected -t test --base=HEAD",
-    "test:ci": "nx affected -t test --base=$BASE_REF --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "test:ci": "cross-env nx affected -t test --base=$BASE_REF --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint:ci": "nx affected -t check:lint:ci --base=$BASE_REF --verbose",
     "check:lint": "nx run-many -t check:lint --verbose",
     "check:size": "nx run-many -t check:size --verbose",
@@ -144,6 +144,7 @@
     "commitizen": "4.3.1",
     "commitlint": "19.5.0",
     "core-js": "3.38.1",
+    "cross-env": "7.0.3",
     "dotenv": "16.4.5",
     "each": "2.7.0",
     "eslint": "8.57.0",
