--- a/.github/workflows/unit-tests-and-lint.yml
+++ b/.github/workflows/unit-tests-and-lint.yml
@@ -36,8 +36,10 @@ jobs:
           npm run setup:ci
 
       - name: Execute unit tests
+        env:
+          BASE_REF: ${{ github.event.pull_request.base.sha || 'HEAD' }}
         run: |
-          BASE_REF=${{ github.event.pull_request.base.sha || 'HEAD' }} npm run test:ci
+          npm run test:ci
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
