chore: skip fixing workflows for now

--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   ],
   "scripts": {
     "setup": "npm i --include=optional && npm run build:package:modern",
-    "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu && cross-env nx affected -t build:package:modern --base=$BASE_REF",
+    "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu && nx affected -t build:package:modern --base=$BASE_REF",
     "clean": "nx run-many -t clean && nx reset && git clean -xdf node_modules",
     "clean:cache": "rimraf -rf ./node_modules/.cache && rimraf -rf ./.nx/cache",
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "build": "nx run-many -t build",
-    "build:ci": "cross-env nx affected -t build --base=$BASE_REF",
+    "build:ci": "nx affected -t build --base=$BASE_REF",
     "build:modern": "nx run-many -t build:modern",
-    "build:modern:ci": "cross-env nx affected -t build:modern --base=$BASE_REF",
+    "build:modern:ci": "nx affected -t build:modern --base=$BASE_REF",
     "build:browser": "nx run-many -t build:browser",
     "build:browser:modern": "nx run-many -t build:browser:modern",
     "build:package": "nx run-many -t build:package",
@@ -24,8 +24,8 @@
     "package": "nx run-many -t package",
     "test": "nx run-many -t test",
     "test:pre-commit:affected": "nx affected -t test --base=HEAD",
-    "test:ci": "cross-env nx affected -t test --base=$BASE_REF --configuration=ci --runInBand --maxWorkers=1 --forceExit",
-    "check:lint:ci": "cross-env nx affected -t check:lint:ci --base=$BASE_REF --verbose",
+    "test:ci": "nx affected -t test --base=$BASE_REF --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "check:lint:ci": "nx affected -t check:lint:ci --base=$BASE_REF --verbose",
     "check:lint": "nx run-many -t check:lint --verbose",
     "check:size": "nx run-many -t check:size --verbose",
     "check:size:build": "nx run-many -t check:size:build",
@@ -39,7 +39,7 @@
     "check:duplicates": "nx run-many -t check:duplicates --verbose",
     "check:security": "npm audit --recursive --audit-level=high --omit=dev",
     "check:pub": "nx run-many -t check:pub --verbose",
-    "check:pub:ci": "cross-env nx affected -t check:pub --verbose --base=$BASE_REF",
+    "check:pub:ci": "nx affected -t check:pub --verbose --base=$BASE_REF",
     "format": "prettier --write .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky",
