chore: fix loading scripts build issue

--- a/packages/loading-scripts/tsconfig.json
+++ b/packages/loading-scripts/tsconfig.json
@@ -5,5 +5,5 @@
     "declarationDir": "./dist/dts",
     "isolatedModules": false
   },
-  "include": ["./package.json", "./src/**/*", "../../types/**/*", "../analytics-js/src/**/*"]
+  "include": ["./package.json", "./src/**/*", "../../types/**/*"]
 }
