chore: fix spec file as well

--- a/packages/loading-scripts/tsconfig.spec.json
+++ b/packages/loading-scripts/tsconfig.spec.json
@@ -18,7 +18,6 @@
     "./__mocks__/**/*",
     "./__fixtures__/**/*",
     "../../types/**/*",
-    "./src/**/*",
-    "../analytics-js/src/**/*"
+    "./src/**/*"
   ]
 }
