chore: restore cache control settings

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ permissions:
 
 env:
   NODE_OPTIONS: "--no-warnings"
-  CACHE_CONTROL: "\"no-store\""
+  CACHE_CONTROL: "\"max-age=3600\"" # "\"no-store\""
 
 jobs:
   deploy:
