chore: fix source config response

--- a/packages/sanity-suite/__fixtures__/sourceConfig1.json
+++ b/packages/sanity-suite/__fixtures__/sourceConfig1.json
@@ -358,7 +358,7 @@
               "piiProperty": ""
             }
           ],
-          "overrideClientAndSessionId": true,
+          "overrideClientAndSessionId": false,
           "oneTrustCookieCategories": [
             {
               "oneTrustCookieCategory": ""
