fix: lock deps version through build

--- a/packages/analytics-js/.env.example
+++ b/packages/analytics-js/.env.example
@@ -1,7 +1,8 @@
 # Variables required for the example
 WRITE_KEY=
 DATAPLANE_URL=
-TEST_FILE_PATH=
+
+# Optional variables
 CONFIG_SERVER_HOST=
 DEST_SDK_BASE_URL=
 REMOTE_MODULES_BASE_PATH=
